--- a/KeyboardStatus/KeyboardStatus.csproj
+++ b/KeyboardStatus/KeyboardStatus.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>KeyboardStatus</RootNamespace>
     <AssemblyName>KeyboardStatus</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v2.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -36,16 +37,13 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="AdrHook">
-      <HintPath>..\..\..\..\AdrHookDemo\AdrHookDemo\AdrHookDemo\bin\Debug\AdrHook.dll</HintPath>
+      <HintPath>C:\Users\Jason\Desktop\AdrHookDemo\AdrHook\bin\Release\AdrHook.dll</HintPath>
     </Reference>
-    <Reference Include="Grass.Windows">
-      <HintPath>..\..\GrassLib\Grass.Windows\bin\Release\Grass.Windows.dll</HintPath>
+    <Reference Include="Grass.Windows, Version=1.0.0.1, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\Github.oschina\GrassLib\Grass.Windows\bin\Debug\Grass.Windows.dll</HintPath>
     </Reference>
     <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Deployment" />
     <Reference Include="System.Drawing" />
@@ -85,6 +83,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <None Include="app.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
